fix de overflow

--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,11 @@
 
 html,
 body {
-	overflow: hidden;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 300;
+	box-sizing: border-box;
+	overflow: hidden;
+	height: 100%;
 }
 
 :root {
@@ -23,18 +25,19 @@ body {
 
 .webgl {
 	position: fixed;
+	display: block;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	outline: none;
 }
 .ui {
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	pointer-events: none;
 }
 .btnSp {
@@ -54,22 +57,7 @@ body {
 		transform 200ms cubic-bezier(0.2, 0, 0.7, 1);
 	pointer-events: all;
 }
-.test {
-	position: absolute;
-	right: 5%;
-	top: 15%;
-	color: #ffffff;
-	width: 10rem;
-	background: rgba(167, 52, 57, 1);
-	/* border: white solid 1px; */
-	padding: 1rem;
-	z-index: 1;
-	border-radius: 5rem;
-	border: none;
-	cursor: pointer;
-	transition: box-shadow 400ms ease-in-out,
-		transform 200ms cubic-bezier(0.2, 0, 0.7, 1);
-}
+
 .btnSpText {
 	font-family: 'Roboto', sans-serif;
 	font-weight: bold;
@@ -84,8 +72,8 @@ body {
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 
 	background-color: white;
 	display: flex;
@@ -200,9 +188,9 @@ body {
 	/* top: -2rem; */
 	top: 0;
 	left: 0;
-	transform: translate(5%, -48%);
+	transform: translate(10%, -48%);
 	/* left: 30px; */
-	width: 400px;
+	width: 12rem;
 	padding: 20px;
 	border-radius: 4px;
 	text-align: center;
@@ -215,10 +203,10 @@ body {
 	);
 	/* border: 1px solid #ffffff77; */
 	color: #ffffff;
-	line-height: 1.1rem;
+	line-height: 1.3em;
 	/* font-family: Helvetica, sans-serif; */
 	font-weight: 300;
-	font-size: 14px;
+	font-size: calc(6px + (14 - 6) * ((100vw - 320px) / (1440 - 320)));
 	opacity: 0;
 	transition: opacity 0.3s;
 	pointer-events: none;
